# nugu-linux

./: .checkpatch.conf  .cppcheck_suppress.txt  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  annotated.html  annotated_dup.js  asr__interface_8hh.html  asr__interface_8hh.js  asr__interface_8hh__dep__incl.map  asr__interface_8hh__dep__incl.md5  asr__interface_8hh__incl.map  asr__interface_8hh__incl.md5  asr__interface_8hh_source.html  audio__player__interface_8hh.html  audio__player__interface_8hh.js  audio__player__interface_8hh__dep__incl.map  audio__player__interface_8hh__dep__incl.md5  audio__player__interface_8hh__incl.map  audio__player__interface_8hh__incl.md5  audio__player__interface_8hh_source.html  battery__interface_8hh.html  battery__interface_8hh.js  battery__interface_8hh__incl.map  battery__interface_8hh__incl.md5  battery__interface_8hh_source.html  bluetooth__interface_8hh.html  bluetooth__interface_8hh.js  bluetooth__interface_8hh__incl.map  bluetooth__interface_8hh__incl.md5  bluetooth__interface_8hh_source.html  capability_8hh.html  capability_8hh.js  capability_8hh__dep__incl.map  capability_8hh__dep__incl.md5  (+1724 more)
examples/: CMakeLists.txt  nugusdk_start_sample.sh
examples/capability_injection/: CMakeLists.txt  battery_agent.cc  battery_agent.hh  main_capability_injection.cc  permission_agent.cc  permission_agent.hh
examples/oob_setup/: CMakeLists.txt  README.md  nugu_oob.service  nugu_oob_server.py
examples/profiling/: CMakeLists.txt  README.md  main_prof.cc
examples/response_filter/: CMakeLists.txt  filter.cc  filter.h  filter.hh  main.cc
examples/simple_asr/: CMakeLists.txt  main_asr.cc
examples/simple_play/: CMakeLists.txt  main_play.cc
examples/simple_text/: CMakeLists.txt  main_text.cc  text.cc
examples/simple_tts/: CMakeLists.txt  main_tts.cc
examples/standalone/: CMakeLists.txt  README.md  audio_player_listener.cc  audio_player_listener.hh  bluetooth_status.cc  bluetooth_status.hh  capability_collection.cc  capability_collection.hh  delegation_listener.cc  delegation_listener.hh  display_listener.cc  display_listener.hh  extension_listener.cc  extension_listener.hh  nugu_sample.cc  nugu_sample_manager.cc  nugu_sample_manager.hh  nugu_sdk_manager.cc  nugu_sdk_manager.hh  permission_listener.cc  permission_listener.hh  permission_manager.hh  speaker_status.cc  speaker_status.hh  speech_operator.cc  speech_operator.hh  system_listener.cc  system_listener.hh  tts_listener.cc  tts_listener.hh
plugins/: CMakeLists.txt  dummy.c  filedump.c  filereader.c  gstreamer.c  gstreamer_pcm.c  gstreamer_recorder.c  opus.c  opus_encoder.c  portaudio.c  portaudio_pcm_async.c  portaudio_pcm_sync.c  portaudio_recorder.c  speex.c
src/: CMakeLists.txt  nugu_buffer.c  nugu_config.c  nugu_dbus.c  nugu_decoder.c  nugu_directive.c  nugu_directive_sequencer.c  nugu_equeue.c  nugu_event.c  nugu_focus.c  nugu_log.c  nugu_network_manager.c  nugu_pcm.c  nugu_player.c  nugu_plugin.c  nugu_recorder.c  nugu_ringbuffer.c  nugu_timer.c  nugu_uuid.c
src/base/: CMakeLists.txt  builtin.h.in  nugu_audio.c  nugu_buffer.c  nugu_curl_log.c  nugu_curl_log.h  nugu_decoder.c  nugu_directive.c  nugu_directive_sequencer.c  nugu_encoder.c  nugu_equeue.c  nugu_event.c  nugu_focus.c  nugu_http.c  nugu_log.c  nugu_network_manager.c  nugu_pcm.c  nugu_player.c  nugu_plugin.c  nugu_prof.c  nugu_recorder.c  nugu_ringbuffer.c  nugu_timer.c  nugu_uuid.c  nugu_winsock.c
src/capability/: CMakeLists.txt  asr_agent.cc  asr_agent.hh  asr_interface.cc  audio_player_agent.cc  audio_player_agent.hh  battery_agent.cc  battery_agent.hh  bluetooth_agent.cc  bluetooth_agent.hh  capability.cc  capability.hh  capability_factory.cc  chips_agent.cc  chips_agent.hh  delegation_agent.cc  delegation_agent.hh  display_agent.cc  display_agent.hh  display_interface.cc  display_render_assembly.hh  display_render_assembly.hpp  display_render_helper.cc  display_render_helper.hh  extension_agent.cc  extension_agent.hh  location_agent.cc  location_agent.hh  message_agent.cc  message_agent.hh  mic_agent.cc  mic_agent.hh  nudge_agent.cc  nudge_agent.hh  phone_call_agent.cc  phone_call_agent.hh  routine_agent.cc  routine_agent.hh  session_agent.cc  session_agent.hh  (+12 more)
src/clientkit/: CMakeLists.txt  capability.cc  capability_interface.cc  dialog_ux_state_aggregator.cc  dialog_ux_state_aggregator.hh  network_manager_interface.cc  nugu_auth.cc  nugu_client.cc  nugu_client_impl.cc  nugu_client_impl.hh  nugu_configuration.cc  nugu_http_rest.cc  nugu_runner.cc  playsync_manager_interface.cc  speech_recognizer_aggregator.cc  speech_recognizer_aggregator.hh
src/core/: CMakeLists.txt  audio_input_processor.cc  audio_input_processor.hh  audio_recorder_manager.cc  audio_recorder_manager.hh  capability_creator.cc  capability_creator.hh  capability_helper.cc  capability_helper.hh  capability_manager.cc  capability_manager.hh  capability_manager_helper.cc  capability_manager_helper.hh  directive_sequencer.cc  directive_sequencer.hh  display_render_assembly.hh  display_render_assembly.hpp  focus_manager.cc  focus_manager.hh  interaction_control_manager.cc  interaction_control_manager.hh  media_player.cc  media_player.hh  network_manager.cc  network_manager.hh  nugu_core_container.cc  nugu_core_container.hh  nugu_runner_impl.cc  nugu_runner_impl.hh  nugu_timer.cc  nugu_timer.hh  playstack_manager.cc  playstack_manager.hh  playsync_manager.cc  playsync_manager.hh  routine_manager.cc  routine_manager.hh  (+10 more)
tests/: CMakeLists.txt  plugin_dummy.c  plugin_nugu.c  plugin_nugu_custom.c  test-nugu-buffer.c  test-nugu-decoder.c  test-nugu-directive.c  test-nugu-event.c  test-nugu-pcm.c  test-nugu-player.c  test-nugu-plugin.c  test-nugu-recorder.c  test-nugu-ringbuffer.c  test-nugu-timer.c  test-nugu-uuid.c  test_nugu_audio.c  test_nugu_buffer.c  test_nugu_decoder.c  test_nugu_directive.c  test_nugu_encoder.c  test_nugu_event.c  test_nugu_http.c  test_nugu_pcm.c  test_nugu_player.c  test_nugu_plugin.c  test_nugu_recorder.c  test_nugu_timer.c  test_nugu_uuid.c  test_server.js
(+567 files in other folders)
